<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Stuff Manager</string>
    <string name="action_edit">Edit</string>
    <string name="scan">Scan</string>
    <string name="title_activity_scan_menu">ScanMenuActivity</string>
    <string name="Contacts">Contacts</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>

    <!--
         Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll.
    -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--
         When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
    -->
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="addCalendarEvent">Add Calendar Event</string>
    <string name="title_activity_display_results">DisplayResults</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="scanedCode">Scanned code</string>
    <string name="type">Type</string>
    <string name="save">Save</string>
    <string name="withdraw">Just let it go...</string>
    <string name="retrn">Back to the stack!</string>
    <string name="product_management">Product Management</string>
    <string-array name="itemTypes">
        <item>Key</item>
        <item>Book</item>
        <item>Movie</item>
        <item>Music</item>
        <item>Serial</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="inDate">Return Date</string>
    <string name="outDate">Withdraw Date</string>
    <string name="contactUri">Who</string>
    <string name="reload">Reload Server</string>
    <string name="itemTypesUpdateButton">Update Item Types</string>
    <string name="scanOkinfo">Scanned \"%1s\" tag. What you wanna do?</string>

</resources>
