<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/library_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.68">

        <Button
            android:id="@+id/listButton"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:text="@string/list" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_centerHorizontal="true"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:text="@string/search" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="189dp"
            android:layout_height="91dp"
            android:layout_alignParentLeft="true"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/back" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="192dp"
            android:layout_height="91dp"
            android:layout_alignParentRight="true"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/help" />
    </GridLayout>

</LinearLayout>